--- a/index.ipynb
+++ b/index.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction to Pipelines"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Introduction to Pipelines\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "Great! You're knowledge has expanded significantly in the previous sections. You learned several unsupervised learning techniques \n",
@@ -20,20 +15,10 @@
     "You will be able to:\n",
     "- Compare different classification techniques\n",
     "- Construct pipelines in scikit-learn\n",
-    "- Use pipelines in combination with GridSearchCV"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Why Use Pipelines?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- Use pipelines in combination with GridSearchCV\n",
+    "\n",
+    "## Why Use Pipelines?\n",
+    "\n",
     "Pipelines are extremely useful tools to write clean and manageable code for machine learning. Recall how we start preparing our data set: we want to clean our data, transform it, potentially use feature selection, and then run a machine learning algorithm. Using pipelines, you can do all these steps in one go!\n",
     "\n",
     "Pipeline functionality can be found in the scikit-learn library `Pipeline`. Pipelines can be coded in a very simple way:\n",
@@ -55,29 +40,15 @@
     "\n",
     "```\n",
     "\n",
-    "A really good blogpost on the basic ideas of pipelining can be found [here](https://www.kdnuggets.com/2017/12/managing-machine-learning-workflows-scikit-learn-pipelines-part-1.html).\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Integrating Grid Search in Pipelines"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "A really good blogpost on the basic ideas of pipelining can be found [here](https://www.kdnuggets.com/2017/12/managing-machine-learning-workflows-scikit-learn-pipelines-part-1.html).\n",
+    "\n",
+    "\n",
+    "## Integrating Grid Search in Pipelines\n",
+    "\n",
     "Note that the above pipeline simply creates one pipeline for a training set, and evaluates on a test set. Is it possible to create a pipeline that performs grid search? And Cross-Validation? Yes we can!\n",
     "\n",
-    "Some code is shown below. You simply create the pipe the way we did it before. Next, you create a parameter grid. When this is all done, you use the function `GridSearchCV()`, which you've seen before, and specify the pipeline as the estimator and the parameter grid. You also have to define how many folds you'll use in your crossvalisation. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Some code is shown below. You simply create the pipe the way we did it before. Next, you create a parameter grid. When this is all done, you use the function `GridSearchCV()`, which you've seen before, and specify the pipeline as the estimator and the parameter grid. You also have to define how many folds you'll use in your cross-validation. \n",
+    "\n",
     "```python\n",
     "# Create the pipeline\n",
     "pipe = Pipeline([('scl', MinMaxScaler()),\n",
@@ -98,27 +69,12 @@
     "\n",
     "# Fit using grid search\n",
     "gridsearch.fit(X_train, y_train)\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "An article with a detailed workflow can be found [here](https://www.kdnuggets.com/2018/01/managing-machine-learning-workflows-scikit-learn-pipelines-part-2.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Summary"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
+    "An article with a detailed workflow can be found [here](https://www.kdnuggets.com/2018/01/managing-machine-learning-workflows-scikit-learn-pipelines-part-2.html).\n",
+    "\n",
+    "## Summary\n",
+    "\n",
     "Great, this wasn't too difficult! The proof of all this is in the pudding. In the next lab, you'll extensively use this workflow to build several pipelines applying several classification algorithms used in this model. Go over to the lab and start with your practice!"
    ]
   }
